[Close #4] update to rebar3 and sumo_db version

--- a/test/test.config
+++ b/test/test.config
@@ -21,7 +21,7 @@
         {workers, 10}]
       }]
     },
-    {docs, [{sumo_test_people_elasticsearch, sumo_test_elasticsearch}]},
+    {docs, [{sumo_test_people_elasticsearch, sumo_test_elasticsearch, #{module => sumo_test_people_elasticsearch}}]},
     {events,
       [{sumo_test_people_elasticsearch,
         sumo_test_people_elasticsearch_events_manager}]
