--- a/rebar.config
+++ b/rebar.config
@@ -25,8 +25,7 @@
 
 %% == Dependencies ==
 
-{deps, [ {lager,   "3.5.0"}
-       , {sumo_db, "0.6.1"}
+{deps, [ {sumo_db, "0.6.1"}
        , {tirerl,  "1.0.2"}
        , {iso8601, "1.2.3"}
        ]}.
